--- a/core/src/main/resources/render/theme/layout/latex.css
+++ b/core/src/main/resources/render/theme/layout/latex.css
@@ -11,6 +11,7 @@
     --qd-code-span-font-size: 0.93em;
     --qd-slides-code-block-font-size: 1.5em;
     --qd-block-margin: 1.8em;
+    --qd-paragraph-vertical-margin: 1.5em;
     --qd-line-height: 1.5;
     --qd-slides-horizontal-alignment: start;
     --qd-quote-type-label-suffix: ". ";
